# api/xhylblog/swagger/swagger.yml
@@ -165,23 +165,6 @@ paths:
             $ref: '#/definitions/models.User'
         "403":
           description: ""
-    post:
-      tags:
-      - user
-      description: create User
-      operationId: UserController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for User content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "201":
-          description: '{int} models.User'
-        "403":
-          description: body is empty
   /user/{id}:
     get:
       tags:
@@ -241,6 +224,60 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /user/login:
+    post:
+      tags:
+      - user
+      description: 用户登录获取token
+      operationId: UserController.用户登录获取token
+      parameters:
+      - in: body
+        name: body
+        description: body for User content
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "201":
+          description: '{int} models.User'
+        "403":
+          description: body is empty
+  /user/logout:
+    post:
+      tags:
+      - user
+      description: 用户注销
+      operationId: UserController.用户注销
+      parameters:
+      - in: body
+        name: body
+        description: body for User content
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "201":
+          description: '{int} models.User'
+        "403":
+          description: body is empty
+  /user/register:
+    post:
+      tags:
+      - user
+      description: create User
+      operationId: UserController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for User content
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "201":
+          description: '{int} models.User'
+        "403":
+          description: body is empty
 definitions:
   models.Article:
     title: Article
